<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <Button
        android:id="@+id/text_generate"
        android:text="@string/text_generate"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/create_summary"
        android:text="@string/create_summary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/pdf_explore"
        android:layout_below="@id/create_summary"
        android:text="@string/pdf_explore"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>